Solve coffeeshop kata